# transcribe

./: .dockerignore  .flake8  .gitignore  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  app.py  pyproject.toml  pytest.ini  requirements.txt  template.env
src/: config.py  youtube.py
src/services/whisper/: __init__.py  whisper.py
